--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,43 @@
-/.vscode
-/ChaudFroid.exe
-/ChaudFroid.ilk
-/ChaudFroid.obj
-/ChaudFroid.pdb
-/ChronoSpacer.exe
-/ChronoSpacer.ilk
-/ChronoSpacer.obj
-/ChronoSpacer.pdb
-/HelloWorld.cpp
-/HelloWorld.exe
-/HelloWorld.ilk
-/HelloWorld.obj
-/HelloWorld.pdb
-/vc140.pdb
+/.vscode/
+
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Linker files
+*.ilk
+
+# Debugger Files
+*.pdb
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
+# debug information files
+*.dwo
